Correções sugeridas pelo frontend mentor

--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
     <title>Document</title>
 </head>
 <body>
-    <main class="container">
-        <section class="container__img">
-            <img src="./styles/assets/image-qr-code.png" alt="">
-        </section>
-        <section class="container__text">
-            <h5 class="container__text__emphasis">Improve your front-end skills by building projects</h5>
-            <p class="container__text__info">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
-        </section>
+    <main>
+        <article class="container">
+            <img class="container__img" src="./styles/assets/image-qr-code.png" alt="White Qr code image with blue background">
+            <section class="container__text">
+                <h5 class="container__text__emphasis">Improve your front-end skills by building projects</h5>
+                <p class="container__text__info">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+            </section>
+        </article>
+
     </main>
 </body>
 </html>
